# teams-agent

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
teams_agent_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: auth_error.html  index.html
terraform/: main.tf  outputs.tf  variables.tf
